--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "todotest",
-  "version": "1.0.0",
-  "description": "ToDo test app",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/delapohl/ToDoTest.git"
-  },
-  "author": "Michael Pohl",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/delapohl/ToDoTest/issues"
-  },
-  "homepage": "https://github.com/delapohl/ToDoTest#readme"
+    "name": "todotest",
+    "version": "1.0.0",
+    "description": "ToDo test app",
+    "main": "app.js",
+    "scripts": {
+        "build": "tsc",
+        "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/delapohl/ToDoTest.git"
+    },
+    "author": "Michael Pohl",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/delapohl/ToDoTest/issues"
+    },
+    "homepage": "https://github.com/delapohl/ToDoTest#readme",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.2",
+        "mongoose": "^6.1.4"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/mongoose": "^5.11.97",
+        "@types/node": "^17.0.6",
+        "concurrently": "^6.5.1",
+        "nodemon": "^2.0.15"
+    }
 }
